--- a/payment.html
+++ b/payment.html
@@ -147,8 +147,8 @@
 	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- Core theme JS-->
 	<script src="js/scripts.js"></script>
-	<!--<script src="cart.js"></script>-->
-	<script src="order.js"></script>
+	<script src="cart.js"></script>
+	
 	<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
