--- a/index.html
+++ b/index.html
@@ -134,23 +134,7 @@
 				and to choose a more sustainable lifestyle. We create value for people and society in general by delivering our customer offering and by developing 
 				with a focus on sustainable and profitable growth.
                 
-            <!-- <ul style="text-align: left;">
-                <li>Has experience working on collaboration and document management systems in Office 365
-                    and SharePoint 2013.</li>
-                <li>Has supported various SharePoint client sites and solved various issues real time.</li>
-                <li>Has experience working in different phases of application development including requirement
-                    gathering, design, development, and deployment and long-term support.</li>
-                <li>Has experience in migration from old SharePoint version to cloud using Sharegate.</li>
-                <li>Has experience in Business process automation and intelligence with Power Platform
-                    (Power Automate, Power BI, PowerApps).</li>
-                <li>Has experience in designing and developing applications and portals using SharePoint
-                    2010,2013, Office 365, SharePoint 2010/2013 workflow platforms, and SPFx.</li>
-                <li>Experience in customizing SharePoint pages using Bootstrap, JavaScript, jQuery, HTML,
-                    CSS, Angular, TypeScript, and React along with REST API and JSOM.</li>
-                <li>Microsoft Certifications: MS-900 Microsoft 365 Fundamentals and PL-900 Power Platform
-                    Fundamentals.</li>
-                <li>Has knowledge about basics of Python Programming.</li>
-            </ul> -->
+            
             </p>
         </div>
     </div>
@@ -218,52 +202,7 @@
         </ul>
     </div>
 </section>
-<!-- Work-->
-<!-- <section class="page-section bg-light" id="work">
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">Work</h2>
-            <h3 class="section-subheading text-muted"></h3>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <h4>HTML and CSS</h4>
-                    <p class="text-muted">My Portfolio</p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/Jain-Joseph1996/jainjoseph"
-                        aria-label="github"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://jain-joseph1996.github.io/jainjoseph/"
-                        aria-label="externallink"><i class="fa fa-external-link"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <h4>JAVASCRIPT</h4>
-                    <p class="text-muted">GEAR BIKE SHARE</p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/Jain-Joseph1996/gearbike"
-                        aria-label="github"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="externallink"><i
-                            class="fa fa-external-link"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-member">
-                    <h4>SHAREPOINT</h4>
-                    <p class="text-muted">SPFx</p>
-                    <a class="btn btn-dark btn-social mx-2" href="https://github.com/Jain-Joseph1996/spfx"
-                        aria-label="github"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="externallink"><i
-                            class="fa fa-external-link"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-8 mx-auto text-center">
-                <p class="large text-muted"></p>
-            </div>
-        </div>
-    </div>
-</section> -->
+
 <!-- Contact-->
 <section class="page-section" id="contact">
     <div class="container">
@@ -271,12 +210,12 @@
             <h2 class="section-heading text-uppercase">Contact</h2>
             <h3 class="section-subheading text-muted">Say Hello through email</h3>
         </div>
-        <form id="contactForm">
+        <form class="contactForm">
             <div class="row align-items-stretch mb-5">
                 <div class="col-md-12">
                     <div class="form-group">
                         <!-- Name input-->
-                        <input class="form-control" id="contactname" type="text" placeholder="Name *"
+                        <input class="form-control" class="contactname" type="text" placeholder="Name *"
                                data-sb-validations="required" />
                         <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                     </div>
@@ -284,7 +223,7 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <!-- Email input-->
-                        <input class="form-control" id="contactemail" type="email" placeholder="Email *"
+                        <input class="form-control" class="contactemail" type="email" placeholder="Email *"
                                data-sb-validations="required" />
                         <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                     </div>
@@ -300,7 +239,7 @@
                 <div class="col-md-12">
                     <div class="form-group form-group-textarea mb-md-0">
                         <!-- Message input-->
-                        <textarea class="form-control" id="message" placeholder="Your Message *"
+                        <textarea class="form-control" class="message" placeholder="Your Message *"
                                   data-sb-validations="required"></textarea>
                         <div class="invalid-feedback" data-sb-feedback="message:required">
                             A message is required.
@@ -308,11 +247,11 @@
                     </div>
                 </div>
             </div>
-            <!-- Submit success message-->
-
-            <!-- Submit Button-->
-            <div class="text-center"><button onclick="sendEmail()" class="btn btn-primary btn-xl text-uppercase" id="submitButton"
-                    type="submit" >Send Email</button></div>
+            <div class="text-center">
+                <button onclick="sendEmail()" class="btn btn-primary btn-xl text-uppercase" id="submitButton"
+                    type="submit" >Send Email
+                </button>
+            </div>
         </form>
     </div>
 </section>
@@ -339,6 +278,7 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="js/scripts.js"></script>
 <script src="cart.js"></script>
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
