--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>MERCH SITE</title>
+    <title>FABULOUS MERCH </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -31,7 +31,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html#page-top">MERCH STORE NAME</a>
+            <a class="navbar-brand" href="index.html#page-top">FABULOUS MERCH</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -193,7 +193,9 @@
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4 class="subheading">STORE IN TORONTO</h4>
-                        <p>Address</p>
+                        <p>15 GDSGH Street</p>
+                        <p>Toronto</p>
+                        <p>Ontario</p>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">
@@ -211,7 +213,9 @@
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4 class="subheading">EXTENDED TO</h4>
-                        <p>Address</p>
+                        <p>15 XYZ Street</p>
+                        <p>Missisauga</p>
+                        <p>Ontario</p>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">
@@ -229,7 +233,9 @@
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4 class="subheading">FIRST STORE AT MISSISSAUGA</h4>
-                        <p>Address</p>
+                        <p>15 ABDC Street</p>
+                        <p>Missisauga</p>
+                        <p>Ontario</p>
                     </div>
                     <div class="timeline-body">
                         <p class="text-muted">
@@ -296,7 +302,7 @@
 <footer class="footer py-4">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-4 text-lg-start">Designed and built by:</div>
+            <div class="col-lg-4 text-lg-start">Designed and built by:FABULOUS MERCH</div>
             <div class="col-lg-4 my-3 my-lg-0">
                 <a class="btn btn-dark btn-social mx-2" href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-dark btn-social mx-2" href="#" aria-label="Facebook"><i
