--- a/login_sample.html
+++ b/login_sample.html
@@ -74,7 +74,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="index.html#page-top">MERCH STORE NAME</a>
+            <a class="navbar-brand" href="index.html#page-top">FABULOUS MERCH</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
