--- a/cartdetails.html
+++ b/cartdetails.html
@@ -82,7 +82,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Designed and built by: Jain Joseph</div>
+                    <div class="col-lg-4 text-lg-start">Designed and built by: FABULOUS MERCH</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/jain_josef" aria-label="Twitter">
                             <i class="fab fa-twitter"></i>
