--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">ABOUT US</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">LOGIN</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login_sample.html">LOGIN</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">CONTACT US</a></li>
                     <li class="nav-item"><a class="nav-link" href="order.html">ORDERS</a></li>
                     <li class="nav-item">
