--- a/login_sample.html
+++ b/login_sample.html
@@ -176,7 +176,7 @@
 <footer class="footer py-4">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-4 text-lg-start">Designed and built by:</div>
+            <div class="col-lg-4 text-lg-start">Designed and built by:FABULOUS MERCH</div>
             <div class="col-lg-4 my-3 my-lg-0">
                 <a class="btn btn-dark btn-social mx-2" href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-dark btn-social mx-2" href="#" aria-label="Facebook"><i
